--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -45,6 +45,7 @@
     "@storybook/addon-ondevice-controls": "next",
     "@storybook/addon-ondevice-notes": "next",
     "@storybook/addon-react-native-web": "^0.0.19",
+    "@storybook/client-api": "^6.5.15",
     "@storybook/react": "^6.5.14",
     "@storybook/react-native": "next",
     "@types/react": "~18.0.24",
