--- a/packages/creator/package.json
+++ b/packages/creator/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@gluestack/ui-creator",
-  "version": "0.1.0-alpha.9",
+  "version": "0.1.0",
   "main": "lib/commonjs/index",
   "module": "lib/module/index",
   "types": "lib/typescript/index.d.ts",
