--- a/ui/package.json
+++ b/ui/package.json
@@ -27,6 +27,7 @@
     "@react-native-community/slider": "4.2.4",
     "expo": "^47.0.0",
     "expo-status-bar": "~1.4.2",
+    "fs-extra": "^11.1.0",
     "react-native-safe-area-context": "^4.4.1",
     "react-native-svg": "^13.6.0",
     "uuidv4": "^6.2.13"
