--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -28,6 +28,7 @@
     "expo": "^47.0.0",
     "expo-linear-gradient": "~12.0.1",
     "expo-status-bar": "~1.4.2",
+    "prism-react-renderer": "^1.3.5",
     "react-native-safe-area-context": "^4.4.1",
     "react-native-svg": "^13.6.0",
     "uuidv4": "^6.2.13"
