--- a/lucide-icons/package.json
+++ b/lucide-icons/package.json
@@ -8,9 +8,10 @@
   "source": "src/index",
   "typings": "lib/typescript/index.d.ts",
   "scripts": {
-    "build": "node generateIcons.js && bob build",
+    "build": "bob build",
     "clean": "rm -rf lib",
-    "dev:web": "cd example/native && yarn web"
+    "dev:web": "cd example/native && yarn web",
+    "generate": "node generateIcons.js && bob build"
   },
   "devDependencies": {
     "@types/lodash.merge": "^4.6.7",
