--- a/styled/example/storybook/package.json
+++ b/styled/example/storybook/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@gluestack/ui-storybook",
+  "name": "@gluestack/styled-storybook",
   "private": false,
   "version": "0.1.0",
   "main": "index.js",
