--- a/styled/example/storybook/package.json
+++ b/styled/example/storybook/package.json
@@ -25,10 +25,13 @@
     "@react-native-async-storage/async-storage": "~1.17.3",
     "@react-native-community/datetimepicker": "6.5.2",
     "@react-native-community/slider": "4.2.4",
+    "ejs": "^3.1.8",
     "expo": "^47.0.0",
     "expo-linear-gradient": "~12.0.1",
     "expo-status-bar": "~1.4.2",
+    "fs": "^0.0.1-security",
     "prism-react-renderer": "^1.3.5",
+    "prompts": "^2.4.2",
     "react-native-safe-area-context": "^4.4.1",
     "react-native-svg": "^13.6.0",
     "uuidv4": "^6.2.13"
