--- a/glustack-design-system/tsconfig.json
+++ b/glustack-design-system/tsconfig.json
@@ -3,11 +3,8 @@
   "compilerOptions": {
     "baseUrl": ".",
     "paths": {
-      "@gluestack/ui-creator": ["../creator/src/index"],
       "@gluestack/popper": ["../popper/src/index"],
-      "@gluestack/ui": ["../ui/src/index"],
-      "@gluestack/ui-styled": ["../styled/src/index"],
-      "@gluestack/color-mode": ["../color-mode/src/index"]
+      "@gluestack/ui": ["../ui/src/index"]
     },
     "emitDeclarationOnly": true,
     "noEmit": false,
