--- a/storybook/package.json
+++ b/storybook/package.json
@@ -38,6 +38,7 @@
     "@gluestack/popper": "*",
     "@gluestack/ui-creator": "*",
     "@gluestack/ui-styled": "*",
+    "@gluestack/ui": "*",
     "@storybook/addon-actions": "^6.5.14",
     "@storybook/addon-controls": "^6.5.14",
     "@storybook/addon-docs": "^6.5.15",
@@ -65,6 +66,7 @@
     "@gluestack/popper": "*",
     "@gluestack/ui-creator": "*",
     "@gluestack/ui-styled": "*",
+    "@gluestack/ui": "*",
     "react": "*",
     "react-dom": "*",
     "react-native": "*",
