--- a/storybook/tsconfig.json
+++ b/storybook/tsconfig.json
@@ -32,5 +32,5 @@
     "strict": true,
     "target": "esnext"
   },
-  "exclude": ["components", "lib", "node_modules", "storybookDocsComponents"]
+  "exclude": ["lib", "node_modules", "storybookDocsComponents"]
 }
