--- a/packages/styled/example/storybook/tsconfig.json
+++ b/packages/styled/example/storybook/tsconfig.json
@@ -7,7 +7,7 @@
       "@gluestack/design-system": [
         "../../../../glustack-design-system/src/index"
       ],
-      "@gluestack/color-mode": ["../../color-mode/src/index"]
+      "@gluestack/color-mode": ["../../../color-mode/src/index"]
     },
     "emitDeclarationOnly": true,
     "noEmit": false,
