--- a/gluestack-design-system/package.json
+++ b/gluestack-design-system/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@gluestack/design-system",
   "private": false,
-  "version": "0.1.0",
+  "version": "0.1.0-alpha.0",
   "main": "index.js",
   "module": "lib/module/index",
   "types": "lib/typescript/index.d.ts",
