--- a/packages/styled/example/storybook/package.json
+++ b/packages/styled/example/storybook/package.json
@@ -35,7 +35,7 @@
     "prism-react-renderer": "^1.3.5",
     "prompts": "^2.4.2",
     "react-native-safe-area-context": "^4.4.1",
-    "react-native-svg": "^13.6.0",
+    "react-native-svg": "13.4.0",
     "uuidv4": "^6.2.13"
   },
   "devDependencies": {
