--- a/packages/gluestack-design-system/package.json
+++ b/packages/gluestack-design-system/package.json
@@ -1,8 +1,8 @@
 {
   "name": "@gluestack/design-system",
   "private": false,
-  "version": "0.1.0-alpha.0",
-  "main": "index.js",
+  "version": "0.1.0-alpha.1",
+  "main": "lib/commonjs/index",
   "module": "lib/module/index",
   "types": "lib/typescript/index.d.ts",
   "license": "MIT",
@@ -14,8 +14,8 @@
     "release": "release-it"
   },
   "dependencies": {
-    "react-native-svg": "latest",
-    "prism-react-renderer": "^1.3.5"
+    "prism-react-renderer": "^1.3.5",
+    "react-native-svg": "latest"
   },
   "devDependencies": {
     "@babel/core": "^7.19.3",
