--- a/packages/styled/example/storybook/tsconfig.json
+++ b/packages/styled/example/storybook/tsconfig.json
@@ -4,9 +4,7 @@
     "baseUrl": ".",
     "paths": {
       "dank-style": ["../../src"],
-      "@gluestack/design-system": [
-        "../../../../glustack-design-system/src/index"
-      ],
+      "@gluestack/design-system": ["../../../gluestack-design-system/src"],
       "@gluestack/color-mode": ["../../../color-mode/src/index"]
     },
     "emitDeclarationOnly": true,
@@ -33,5 +31,5 @@
     "strict": true,
     "target": "esnext"
   },
-  "exclude": ["components", "lib", "node_modules", "storybookDocsComponents"]
+  "exclude": ["lib", "node_modules"]
 }
