--- a/example/storybook/tsconfig.json
+++ b/example/storybook/tsconfig.json
@@ -3,7 +3,7 @@
   "compilerOptions": {
     "baseUrl": ".",
     "paths": {
-      "@gluestack/ui-styled": ["../../packages/dank-style/src"],
+      "dank-style": ["../../packages/dank-style/src"],
       // "@gluestack/design-system": [
       //   "../../../../glustack-design-system/src/index"
       // ],
