--- a/tooltip/package.json
+++ b/tooltip/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@universa11y/tooltip",
-  "version": "0.1.1",
+  "version": "0.1.5",
   "main": "lib/commonjs/index",
   "module": "lib/module/index",
   "types": "lib/typescript/index.d.ts",
@@ -29,12 +29,12 @@
   },
   "dependencies": {
     "@react-native-aria/focus": "^0.2.7",
-    "react-native-svg": "^13.6.0",
-    "@universa11y/utils": "*",
+    "@universa11y/hooks": "*",
+    "@universa11y/overlay": "*",
     "@universa11y/react-native-aria": "*",
     "@universa11y/transitions": "*",
-    "@universa11y/overlay": "*",
-    "@universa11y/hooks": "*"
+    "@universa11y/utils": "*",
+    "react-native-svg": "^13.6.0"
   },
   "peerDependencies": {
     "react": "*",
