--- a/packages/media-query/package.json
+++ b/packages/media-query/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@dank-style/media-query",
-  "version": "0.1.3",
+  "version": "0.1.10",
   "main": "lib/commonjs/index",
   "types": "lib/typescript/index.d.ts",
   "module": "lib/module/index",
@@ -8,6 +8,8 @@
   "source": "src/index",
   "typings": "lib/typescript/index.d.ts",
   "scripts": {
+    "prepare": "bob build",
+    "release": "release-it",
     "build": "bob build",
     "clean": "rm -rf lib",
     "dev:web": "cd example/native && yarn web"
