--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@dank-style/react",
-  "version": "0.1.30",
+  "version": "0.1.31",
   "main": "lib/commonjs/index",
   "types": "lib/typescript/index.d.ts",
   "module": "lib/module/index",
@@ -23,15 +23,14 @@
     "react-native": "^0.70.3",
     "react-native-builder-bob": "^0.20.1",
     "react-native-web": "^0.18.1",
-    "tsconfig": "*",
-    "typescript": "^4.7.4"
+    "tsconfig": "*"
   },
   "dependencies": {
     "@dank-style/color-mode": "*",
     "@dank-style/convert-utility-to-sx": "*",
-    "@dank-style/css-injector": "0.1.5",
-    "@dank-style/cssify": "0.1.7",
-    "@dank-style/media-query": "0.1.3"
+    "@dank-style/css-injector": "0.1.10",
+    "@dank-style/cssify": "0.1.10",
+    "@dank-style/media-query": "0.1.10"
   },
   "react-native-builder-bob": {
     "source": "src",
