--- a/tooltip/tsconfig.json
+++ b/tooltip/tsconfig.json
@@ -6,7 +6,7 @@
     "@universa11y/utils": ["../utils/src"],
     "@universa11y/transitions": ["../transitions/src"],
     "@universa11y/hooks": ["../hooks/src"],
-    "@universa11y/floating-ui": ["../floating-ui/src"]
+    "@universa11y/floating-ui": ["../packages/floating-ui/src"]
   },
   "compilerOptions": {
     "emitDeclarationOnly": true,
