--- a/link/package.json
+++ b/link/package.json
@@ -32,7 +32,7 @@
     "@react-native-aria/interactions": "^0.2.8",
     "@universa11y/react-native-aria": "*",
     "@universa11y/utils": "*",
-    "react-native-svg": "^13.6.0"
+    "react-native-svg": "13.4.0"
   },
   "peerDependencies": {
     "react": "*",
