--- a/overlay/package.json
+++ b/overlay/package.json
@@ -31,7 +31,7 @@
   "dependencies": {
     "@react-native-aria/focus": "^0.2.7",
     "@react-native-aria/overlays": "^0.3.3",
-    "react-native-svg": "^13.6.0"
+    "react-native-svg": "13.4.0"
   },
   "peerDependencies": {
     "react": "*",
