--- a/provider/package.json
+++ b/provider/package.json
@@ -34,7 +34,7 @@
     "@universa11y/toast": "*",
     "@universa11y/transitions": "^0.1.5",
     "@universa11y/utils": "*",
-    "react-native-svg": "^13.6.0"
+    "react-native-svg": "13.4.0"
   },
   "peerDependencies": {
     "react": "*",
