--- a/transitions/package.json
+++ b/transitions/package.json
@@ -32,7 +32,7 @@
     "@universa11y/overlay": "*",
     "@universa11y/react-native-aria": "*",
     "@universa11y/utils": "*",
-    "react-native-svg": "^13.6.0"
+    "react-native-svg": "13.4.0"
   },
   "peerDependencies": {
     "react": "*",
