--- a/packages/hooks/tsconfig.json
+++ b/packages/hooks/tsconfig.json
@@ -1,10 +1,7 @@
 {
   "include": ["src"],
   "exclude": ["node_modules", "example"],
-  "paths": {
-    "@universa11y/react-native-aria": ["../react-native-aria/src"],
-    "@universa11y/utils": ["../utils/src"]
-  },
+  "paths": {},
   "compilerOptions": {
     "emitDeclarationOnly": true,
     "noEmit": false,
