--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@dank-style/react",
-  "version": "0.1.43",
+  "version": "0.1.44",
   "main": "lib/commonjs/index",
   "types": "lib/typescript/index.d.ts",
   "module": "lib/module/index",
@@ -27,7 +27,7 @@
   },
   "dependencies": {
     "@dank-style/color-mode": "*",
-    "@dank-style/convert-utility-to-sx": "*",
+    "@dank-style/convert-utility-to-sx": "0.1.5",
     "@dank-style/css-injector": "0.1.10",
     "@dank-style/cssify": "0.1.10",
     "@dank-style/media-query": "0.1.10"
