--- a/packages/convert-utility-to-sx/package.json
+++ b/packages/convert-utility-to-sx/package.json
@@ -9,7 +9,9 @@
   "typings": "lib/typescript/index.d.ts",
   "scripts": {
     "build": "bob build",
-    "clean": "rm -rf lib"
+    "clean": "rm -rf lib",
+    "prepare": "bob build",
+    "release": "release-it"
   },
   "devDependencies": {
     "@types/lodash.merge": "^4.6.7",
