--- a/packages/provider/package.json
+++ b/packages/provider/package.json
@@ -20,7 +20,7 @@
     "@types/react-native": "^0.69.15",
     "babel-plugin-transform-remove-console": "^6.9.4",
     "react": "^18.1.0",
-    "react-dom": "18.1.0",
+    "react-dom": "^18.1.0",
     "react-native": "^0.70.3",
     "react-native-builder-bob": "^0.20.1",
     "react-native-web": "^0.18.1",
@@ -33,14 +33,12 @@
     "@universa11y/react-native-aria": "*",
     "@universa11y/toast": "*",
     "@universa11y/transitions": "^0.1.5",
-    "@universa11y/utils": "*",
-    "react-native-svg": "13.4.0"
+    "tsconfig": "7",
+    "typescript": "^4.9.4"
   },
   "peerDependencies": {
-    "react": "*",
-    "react-dom": "*",
-    "react-native": "*",
-    "react-native-web": "*"
+    "react": ">=16",
+    "react-dom": ">=16"
   },
   "react-native-builder-bob": {
     "source": "src",
