--- a/packages/tooltip/package.json
+++ b/packages/tooltip/package.json
@@ -20,12 +20,12 @@
     "@types/react-native": "^0.69.15",
     "babel-plugin-transform-remove-console": "^6.9.4",
     "react": "^18.1.0",
-    "react-dom": "18.1.0",
+    "react-dom": "^18.1.0",
     "react-native": "^0.70.3",
     "react-native-builder-bob": "^0.20.1",
     "react-native-web": "^0.18.1",
-    "tsconfig": "*",
-    "typescript": "^4.7.4"
+    "tsconfig": "7",
+    "typescript": "^4.9.4"
   },
   "dependencies": {
     "@react-native-aria/focus": "^0.2.7",
@@ -38,10 +38,8 @@
     "react-native-svg": "13.4.0"
   },
   "peerDependencies": {
-    "react": "*",
-    "react-dom": "*",
-    "react-native": "*",
-    "react-native-web": "*"
+    "react": ">=16",
+    "react-dom": ">=16"
   },
   "react-native-builder-bob": {
     "source": "src",
