--- a/packages/fab/package.json
+++ b/packages/fab/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@universa11y/fab",
-  "version": "0.1.5",
+  "version": "0.1.11",
   "main": "lib/commonjs/index",
   "module": "lib/module/index",
   "types": "lib/typescript/index.d.ts",
@@ -29,8 +29,8 @@
   },
   "dependencies": {
     "@react-native-aria/focus": "^0.2.7",
-    "react-native-svg": "13.4.0",
-    "@universa11y/utils": "latest"
+    "@universa11y/utils": "latest",
+    "react-native-svg": "13.4.0"
   },
   "peerDependencies": {
     "react": ">=16",
